--- a/launches.htm
+++ b/launches.htm
@@ -2,8 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="author" content="Frank Waldal">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>A Mars Adventure - SpaceX past and future launches</title>
-        <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/commonStyles.css">
+        <link href="css/mobileStyles.css" media="screen and (max-width: 699px)" rel="stylesheet">
+        <link href="css/tabletStyles.css" media="screen and (min-width: 700px) and (max-width: 1199px)" rel="stylesheet">
+        <link href="css/lowResStyles.css" media="screen and (min-width: 1200px) and (max-width: 1799px)" rel="stylesheet">
+        <link rel='stylesheet' media='screen and (min-width: 1800px)' href='css/highResStyles.css'>
         <link href="https://unpkg.com/@fullcalendar/core/main.min.css" rel="stylesheet">
         <link href="https://unpkg.com/@fullcalendar/daygrid/main.min.css" rel="stylesheet">
         <script src="https://unpkg.com/@fullcalendar/core/main.min.js"></script>
@@ -21,13 +29,21 @@
                 <li class="current">Launches</li>
                 <li><a href="rockets.htm">Rockets</a></li>
             </ul>
+            <div id="mobileMenuButton">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </header>
-        <main id="viewHeight" class="flexContainer scrollBox">
+        <main class="flexContainer scrollBox">
             <div class="flexElement">
-                <h2 class="centerHeader">Future launches</h2>
+                <h2 class="centerHeader" id="calendarHeader">Future launches</h2>
                 <div id="calendar">
                 </div>
                 <div id="event" class="closed">
+                </div>
+                <div id="mobileJump">
+                    <a href="#pastLaunch">Jump to past launches</a>
                 </div>
                 <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2016_-_07_rics_jcsat-img_0678.jpg?itok=wG7yy6NT" alt="Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;" class="spaceXImg noGridImg">
                 <p class="imgText">Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;</p>
@@ -43,7 +59,8 @@
                 <p class="imgText">Falcon 1 launches from Omelek Island in The Kwajalein Atoll</p>
             </div>
             <div class="flexElement">
-                <h2 class="centerHeader">Past launches</h2>
+                <h2 class="centerHeader" id="pastHeader">Past launches</h2>
+                <a id="pastLaunch"></a>
                 <div  id="pastLaunchContainer">
                     <div class="spinner-error">
                         <span class="spinner">Loading...</span>
@@ -53,7 +70,7 @@
         </main>
         <button id="up">&#x2B06;</button>
         <script src="js/launches.js"></script>
-        <script src="js/scrollDetection.js"></script>
+        <script src="js/scrollMobileMenu.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
         <script>
             calendarInit();
