Minor styling changes, consistant sort order, consistant uppercase

--- a/launches.htm
+++ b/launches.htm
@@ -37,13 +37,13 @@
         </header>
         <main class="flexContainer scrollBox">
             <div class="flexElement">
-                <h2 class="centerHeader" id="calendarHeader">Future launches</h2>
+                <h2 class="centerHeader" id="calendarHeader">Future Launches</h2>
                 <div id="calendar">
                 </div>
                 <div id="event" class="closed">
                 </div>
                 <div id="mobileJump">
-                    <a href="#pastLaunch">Jump to past launches</a>
+                    <a href="#pastLaunch">Jump to Past Launches</a>
                 </div>
                 <img src="https://www.spacex.com/sites/spacex/files/styles/new_gallery_large/public/2016_-_07_rics_jcsat-img_0678.jpg?itok=wG7yy6NT" alt="Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;" class="spaceXImg noGridImg">
                 <p class="imgText">Falcon 9 first stage after landing on droneship &#34;Of Course I Still Love You&#34;</p>
@@ -59,7 +59,7 @@
                 <p class="imgText">Falcon 1 launches from Omelek Island in The Kwajalein Atoll</p>
             </div>
             <div class="flexElement">
-                <h2 class="centerHeader" id="pastHeader">Past launches</h2>
+                <h2 class="centerHeader" id="pastHeader">Past Launches</h2>
                 <a id="pastLaunch"></a>
                 <div  id="pastLaunchContainer">
                     <div class="spinner-error">
