Added footer to all pages

--- a/rockets.htm
+++ b/rockets.htm
@@ -54,6 +54,7 @@
                 <div id="eventRight" class="closed">
                 </div>
             </div>
+            <p class="footer">&#169;2019 - Frank Waldal<br>We at A Mars Adventure do not track your data, for information about Youtubes use of cookies, visit <a href="https://policies.google.com/privacy?hl=en" target="_blank">Google Privacy & Terms</a>.</p>
         </main>
         <img src="img/upArrow.svg" id="up">
         <script src="js/rockets.js"></script>
