--- a/index.htm
+++ b/index.htm
@@ -63,6 +63,7 @@
                     <input type="submit" id="submit" value="Send">
                 </div>
             </form>
+            <p class="footer">&#169;2019 - Frank Waldal<br>We at A Mars Adventure do not track your data, for information about Youtubes use of cookies, visit <a href="https://policies.google.com/privacy?hl=en" target="_blank">Google Privacy & Terms</a>.</p>
         </main>
         <img src="img/upArrow.svg" id="up">
         <script src="js/contact.js"></script>
