--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
         <main id="indexMain" class="scrollBox gridContainer">
             <div class="text1">
                 <p class="indexText">Welcome to A Mars Adventure, a site to awaken your inner space explorer.</p>
-                <p class="indexText">We you information about SpaceX, a company set to revolutionize space travel and exploration of the universe.</p>
+                <p class="indexText">We give you information about SpaceX, a company set to revolutionize space travel and exploration of the universe.</p>
                 <p class="indexText">You can find information and vidoes of past and future launches, rockets and events.</p>
             </div>
             <div class="text2">
